sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value L
      if (L(j-1)>L(j)){
          ^AlgBubbleSort1:8: error: not found: value L
      if (L(j-1)>L(j)){
                 ^AlgBubbleSort1:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
       return 0
              ^AlgBubbleSort1:16: warning: enclosing method bubbleSort has result type Unit: return value discarded
       return 0
       ^